# Logistics-RPF

./: README.md  diagram.excalidraw  ideas.md  main.py  pyproject.toml  requirements.txt
data/input/: rfp_complex.csv  rfp_currency_in_data.csv  rfp_descriptive.csv  rfp_mixed_combined.csv  rfp_shorthand.csv  rfp_standard.csv
data/output/: rfp_complex_mapping.json  rfp_complex_updated.csv  rfp_currency_in_data_mapping.json  rfp_currency_in_data_updated.csv  rfp_descriptive_mapping.json  rfp_descriptive_updated.csv  rfp_mixed_combined_mapping.json  rfp_mixed_combined_updated.csv  rfp_shorthand_mapping.json  rfp_shorthand_updated.csv  rfp_standard_mapping.json
experiments/: rpf.ipynb
src/config/: config.py  schema.py
src/exporter/: exporter.py
src/ingest/: loader.py  preprocessor.py
src/matchers/: kb_mapper.py  llm_matcher.py  validator.py
src/pipeline/: batch_pipeline.py  pipeline.py
